tests/valid/trait/method_call_short_ufcs_local_inferred_empty_struct_literal_receiver.facet
struct Token {}

trait Runner {
  fn run(self: Self) -> ();
}

impl Runner for unrestricted Token {
  fn run(self: Self) -> () {
    ()
  }
}

fn main() -> unrestricted () {
  let x = Token {};
  (Runner::run x)
}
