tests/invalid/trait/method_call_short_ufcs_local_annotated_call_receiver_safety_gate.facet
trait Runner {
  fn run(self: Self) -> unrestricted isize;
}

impl Runner for unrestricted isize {
  fn run(self: Self) -> unrestricted isize {
    self
  }
}

fn seed() -> unrestricted isize {
  1
}

fn main() -> unrestricted isize {
  let x: unrestricted isize = (seed);
  (Runner::run x)
}
